# system_utilities

./: .gitignore  .gitmodules  CMakeLists.txt  README  _gcc_gen.sh  _msvc_gen_2005_32.bat  _msvc_gen_2005_64.bat  _msvc_gen_2010_64_debug.bat  _msvc_gen_2010_64_release.bat  _msvc_gen_2012_64.bat  _xcode_gen.sh  environment.cmake
_cmake_scripts/: Findsystem_utilities.cmake  utils.cmake
sources/: CMakeLists.txt
sources/boost_dynamic_test_helper/: CMakeLists.txt  dynamic_link_helper.h
sources/file_logger/: CMakeLists.txt  file_logger.cpp  file_logger.h
sources/limited_file_logger/: CMakeLists.txt  limited_file_logger.cpp  limited_file_logger.h
sources/logger/: logger.cpp  logger.h
sources/multikey_tree/: CMakeLists.txt  multikey_tree.cpp  multikey_tree.h
sources/property_reader/: CMakeLists.txt  property_reader.cpp  property_reader.h
sources/queue_logger/: CMakeLists.txt  queue_logger.cpp  queue_logger.h
sources/shared_name_storage/: shared_name_storage.cpp  shared_name_storage.h
sources/system_processor/: CMakeLists.txt  system_processor.cpp  system_processor.h
sources/task_processor/: CMakeLists.txt  task_processor.cpp  task_processor.h
sources/time_tracker/: CMakeLists.txt  time_tracker.cpp  time_tracker.h
sources/timer/: CMakeLists.txt  timer.cpp  timer.h
sources/ts_logger/: ts_logger.cpp  ts_logger.h
sources/ts_queue/: ts_queue.cpp  ts_queue.h
sources/windows_service/: CMakeLists.txt  service_manager.cpp  service_manager.h  windows_service.cpp  windows_service.h
tests/: CMakeLists.txt
tests/file_logger_tests/: CMakeLists.txt  file_logger_tests.cpp  test_registrator.cpp  test_registrator.h
tests/limited_file_logger_tests/: CMakeLists.txt  limited_file_logger_tests.cpp  test_registrator.cpp  test_registrator.h
tests/logger_tests/: CMakeLists.txt  logger_tests.cpp  test_registrator.cpp  test_registrator.h
tests/multikey_tree_tests/: CMakeLists.txt  multikey_tree_node_test.cpp  test_registrator.cpp  test_registrator.h
tests/property_reader_tests/: CMakeLists.txt  property_reader_tests.cpp  (+2 more)
tests/system_processor_tests/: CMakeLists.txt  system_processor_tests.cpp  test_registrator.cpp  test_registrator.h
tests/ts_logger_tests/: CMakeLists.txt  test_registrator.cpp  test_registrator.h  ts_logger_tests.cpp
tests/windows_service_tests/: CMakeLists.txt  test_registrator.cpp  test_registrator.h  windows_service_tests.cpp
tests/windows_service_tests/windows_service_tests_helper/: CMakeLists.txt
(+55 files in other folders)
